--- a/_config.yml
+++ b/_config.yml
@@ -74,6 +74,7 @@ defaults:
       comments: false
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
       search: true
+      hide_sidebar: true
       sidebar: home_sidebar
       topnav: topnav
   -
@@ -91,9 +92,10 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      comments: true
+      comments: false
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
       search: true
+      hide_sidebar: true
       sidebar: home_sidebar
       topnav: topnav
 
