--- a/_data/sidebars/home_sidebar.yml
+++ b/_data/sidebars/home_sidebar.yml
@@ -1,7 +1,7 @@
 # This is your sidebar TOC. The sidebar code loops through sections here and provides the appropriate formatting.
 
 entries:
-- title: Sidebar
+- title: Навигация
   levels: one
   folders:
 
@@ -84,6 +84,12 @@ entries:
       url: /example.html
       output: web
     - title: GIMP
+      url: /example.html
+      output: web
+    - title: Awesome
+      url: /example.html
+      output: web
+    - title: Conky
       url: /example.html
       output: web
     - title: Inkscape
