--- a/_data/strings.yml
+++ b/_data/strings.yml
@@ -1,5 +1,5 @@
 
 
 # placed here for translation purposes
-search_placeholder_text: search...
-search_no_results_text: No results found.
+search_placeholder_text: Простой поиск по сайту
+search_no_results_text: Результатов не найдено
