--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -28,6 +28,13 @@
     state: current
     updated: 2020-11-30
 
+  - name: Настольные игры
+    description: |
+      Всякие разные настольные игры, которые я придумывал по ходу своей жизни.  Хорошо проработанные и не очень.
+    tags: [web]
+    state: idea
+    updated: 2020-12-14
+
 - name: Бизнес-литература
   content:
 
