--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -28,6 +28,14 @@
     state: current
     updated: 2020-11-30
 
+  - name: Этот сайт
+    description: |
+      По большей части справочная информация о том, как все организовано у меня на сайте.  Здесь вы можете найти интересные заметки об организации материала у меня на сайте.
+    tags: [web]
+    mdlink: site/landing.md
+    state: current
+    updated: 2020-12-31
+
   - name: Настольные игры
     description: |
       Всякие разные настольные игры, которые я придумывал по ходу своей жизни.  Хорошо проработанные и не очень.
