--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -28,6 +28,13 @@
     state: current
     updated: 2020-11-30
 
+  - name: 365 дней
+    description: |
+    tags: [web]
+    mdlink: 365-days/landing.md
+    state: current
+    updated: 2021-01-01
+
   - name: Этот сайт
     description: |
       По большей части справочная информация о том, как все организовано у меня на сайте.  Здесь вы можете найти интересные заметки об организации материала у меня на сайте.
