--- a/_data/projects.yml
+++ b/_data/projects.yml
@@ -4,14 +4,14 @@
 
   - name: Список научных трудов
     description: |
-      Список всех моих научных трудов в разных форматах.
+      Список всех моих научных трудов в разных форматах.  Ссылки на скачивание.
     tags: [web, pdf]
     state: idea
     updated: 2020-11-30
 
   - name: Шаблоны для научной деятельности
     description: |
-      Шаблоны, которые пригодятся для разных дел в области науки.
+      Шаблоны, которые пригодятся для разных дел в области науки.  Заготовки для папок, шаблоны для статей или отчетов.
     tags: [word]
     link: /science_templates.html
     state: idea
@@ -30,6 +30,7 @@
 
   - name: 365 дней
     description: |
+      Одна статья на каждый день любого года.  Записки о жизни.  Есть о чем подумать или просто взглянуть по-новому на привычные вещи.
     tags: [web]
     mdlink: 365-days/landing.md
     state: current
@@ -52,13 +53,15 @@
 
   - name: Все об Anki
     description: |
-      Мои принципы использования интервальных повторений и Anki и самые разные колоды для заучивания самых разных вещей.
+      Мои принципы использования интервальных повторений и Anki и самые разные колоды для заучивания самых разных вещей от иностранных слов до горячих клавиш офисных пакетов.
     tags: [web]
     mdlink: anki/landing.md
     state: idea
     updated: 2020-12-25
 
   - name: Офисные программы
+    description: |
+      В наше время уметь работать на компьютере --- не роскошь, а необходимость.  Уметь обращаться с офисным пакетом, немного подправлять фотографии и знать секретные опции браузера.
     tags: [web]
     mdlink: soft/office/landing.md
     state: idea
@@ -69,7 +72,7 @@
 
   - name: Как написать книгу
     description: |
-      Полноценная книга о том, как подойти к этому процессу чтобы получить результат.
+      Полноценная книга о том, как подойти к этому процессу чтобы получить результат.  Как организовать рабочее пространство и время, следить за ходом процесса и преодолеть основные трудности.
     tags: [book, web]
     mdlink: howto-write-book/landing.md
     state: idea
