Back to sidenav in howto-write-book
- Reviewed sidebar structure and style
- Joined first sections to match the structure
- Fixed search

--- a/_config.yml
+++ b/_config.yml
@@ -110,6 +110,7 @@ defaults:
       ntplinks: true
       projectname: "Как написать книгу"
       comments: false
+      hide_sidebar: false
       search: true
       sidebar: howto_write_book_sidebar
       topnav: topnav
