--- a/_config.yml
+++ b/_config.yml
@@ -95,7 +95,7 @@ defaults:
       # if you don't want to use Commento.io and just hide comments, change true to false wherever you see the comments property
       search: true
       hide_sidebar: true
-      sidebar: home_sidebar
+      sidebar: projects_sidebar
       topnav: topnav
       permalink: /news/:categories/:year-:month-:day-:title::output_ext
 
