[WIP] My diplomas

--- a/_data/sidebars/projects_sidebar.yml
+++ b/_data/sidebars/projects_sidebar.yml
@@ -18,6 +18,8 @@ entries:
       url: /feedback.html
     - title: Полный список проектов
       url: /all-projects.html
+    - title: Мои дипломы
+      url: /myself/diplomas.html
 
   - title: Наука
     folderitems:
