Internal linux kernel diploma

--- a/_data/myself/diplomas.yml
+++ b/_data/myself/diplomas.yml
@@ -52,6 +52,10 @@
     finished: май 2018
     place: Национальный открытый университет ИНТУИТ
     value: 72 часа
+  - title: Внутреннее устройство ядра Linux
+    finished: октябрь 2021
+    place: Национальный открытый университет ИНТУИТ
+    value: 72 часа
     
 
 - type: certificates
