OS Linux diploma

--- a/_data/myself/diplomas.yml
+++ b/_data/myself/diplomas.yml
@@ -56,6 +56,10 @@
     finished: октябрь 2021
     place: Национальный открытый университет ИНТУИТ
     value: 72 часа
+  - title: Операционная система Linux
+    finished: октябрь 2021
+    place: Национальный открытый университет ИНТУИТ
+    value: 72 часа
     
 
 - type: certificates
